--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+imx-lib (5.1) stable; urgency=medium
+
+  * Freescale update
+
+ -- unknown <privacy@not.given>  Fri, 14 Aug 2015 04:22:02 +0800
+
 imx-lib (3.10.53-1.1.0) unstable; urgency=low
 
   * Initial release
